[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fundo preto.png" type="Texture" id=1]
[ext_resource path="res://assets/story_1.png" type="Texture" id=2]
[ext_resource path="res://assets/story_8.png" type="Texture" id=3]
[ext_resource path="res://assets/story_3.png" type="Texture" id=4]
[ext_resource path="res://assets/story_4.png" type="Texture" id=5]
[ext_resource path="res://assets/story_5.png" type="Texture" id=6]
[ext_resource path="res://assets/story_7.png" type="Texture" id=7]
[ext_resource path="res://assets/story_6.png" type="Texture" id=8]
[ext_resource path="res://Script/cellphone_story.gd" type="Script" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 9 )

[node name="Story1" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="FundoPreto" type="Sprite" parent="."]
position = Vector2( 639.5, 360 )
scale = Vector2( 2.00156, 2.01111 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Story3" type="Sprite" parent="."]
position = Vector2( 641, 363.25 )
scale = Vector2( 0.669792, 0.668055 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Story4" type="Sprite" parent="."]
visible = false
position = Vector2( 641, 358.5 )
scale = Vector2( 0.666667, 0.667593 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Story5" type="Sprite" parent="."]
visible = false
position = Vector2( 637.5, 360.25 )
scale = Vector2( 0.665104, 0.669907 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Story6" type="Sprite" parent="."]
visible = false
position = Vector2( 641.5, 360.5 )
scale = Vector2( 0.668229, 0.663889 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Story7" type="Sprite" parent="."]
position = Vector2( 640.75, 360.25 )
scale = Vector2( 0.66901, 0.666204 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Story8" type="Sprite" parent="."]
position = Vector2( 640.5, 359 )
scale = Vector2( 0.668229, 0.666667 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer3" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer4" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer5" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer6" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
